--- a/portal/public/mix-manifest.json
+++ b/portal/public/mix-manifest.json
@@ -1,4 +1,5 @@
 {
+    "/js/app.js": "/js/app.js",
     "/js/custom/main.js": "/js/custom/main.js",
     "/css/main.min.css": "/css/main.min.css",
     "/css/venobox.min.css": "/css/venobox.min.css"
